objects/sk_test1__c.object
<CustomObject>
    <description>testing</description>
    <fields>
        <fullName>sk_check__c</fullName>
        <defaultValue>true</defaultValue>
        <description>testing</description>
        <label>sk check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sk_picklist__c</fullName>
        <label>sk picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>VC</fullName>
                </value>
                <value>
                    <fullName>nCino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sk_text__c</fullName>
        <description>testing</description>
        <label>sk text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>sk test1</label>
    <nameField>
        <label>sk test1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sk test1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>